RESOLVED FIXED130093
_pageExtendedBackgroundColor should not be exposed on WKWebView
https://bugs.webkit.org/show_bug.cgi?id=130093
Summary _pageExtendedBackgroundColor should not be exposed on WKWebView
Beth Dakin
Reported 2014-03-11 15:34:54 PDT
_pageExtendedBackgroundColor should not be exposed on WKWebView for iOS. <rdar://problem/16256627>
Attachments
Patch (5.23 KB, patch)
2014-03-11 15:48 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2014-03-11 15:48:10 PDT
Note You need to log in before you can comment on or make changes to this bug.