Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm
@@ -375,6 +375,16 @@
     _isWaitingForNewLayerTreeAfterDidCommitLoad = YES;
 }
 
+// This is a convenience method that will convert _page->pageExtendedBackgroundColor() from a WebCore::Color to a UIColor *.
+- (UIColor *)pageExtendedBackgroundColor
+{
+    WebCore::Color color = _page->pageExtendedBackgroundColor();
+    if (!color.isValid())
+        return nil;
+
+    return [UIColor colorWithRed:(color.red() / 255.0) green:(color.green() / 255.0) blue:(color.blue() / 255.0) alpha:(color.alpha() / 255.0)];
+}
+
 - (void)_didCommitLayerTree:(const WebKit::RemoteLayerTreeTransaction&)layerTreeTransaction
 {
     ASSERT(!_customContentView);
@@ -386,7 +396,7 @@
     if (!layerTreeTransaction.scaleWasSetByUIProcess() && ![_scrollView isZooming] && ![_scrollView isZoomBouncing] && ![_scrollView _isAnimatingZoom])
         [_scrollView setZoomScale:layerTreeTransaction.pageScaleFactor()];
 
-    if (UIColor *pageExtendedBackgroundColor = [self _pageExtendedBackgroundColor]) {
+    if (UIColor *pageExtendedBackgroundColor = [self pageExtendedBackgroundColor]) {
         if ([self _backgroundExtendsBeyondPage])
             [_scrollView setBackgroundColor:pageExtendedBackgroundColor];
     }
@@ -903,11 +913,8 @@ static inline WebCore::LayoutMilestones layoutMilestones(_WKRenderingProgressEve
 
 - (UIColor *)_pageExtendedBackgroundColor
 {
-    WebCore::Color color = _page->pageExtendedBackgroundColor();
-    if (!color.isValid())
-        return nil;
-
-    return [UIColor colorWithRed:(color.red() / 255.0) green:(color.green() / 255.0) blue:(color.blue() / 255.0) alpha:(color.alpha() / 255.0)];
+    // This is deprecated.
+    return nil;
 }
 
 - (void)_setBackgroundExtendsBeyondPage:(BOOL)backgroundExtends
