Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h
@@ -72,6 +72,8 @@ typedef NS_OPTIONS(NSUInteger, _WKRenderingProgressEvents) {
 @property (nonatomic, setter=_setObscuredInsets:) UIEdgeInsets _obscuredInsets;
 
 @property (nonatomic, setter=_setBackgroundExtendsBeyondPage:) BOOL _backgroundExtendsBeyondPage;
+
+// This is deprecated and should be removed entirely: <rdar://problem/16294704>.
 @property (readonly) UIColor *_pageExtendedBackgroundColor;
 
 - (void)_beginInteractiveObscuredInsetsChange;
